Fix page moving around on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@ body {
   margin: 0;
   min-height: 100vh;
 }
+
+canvas {
+    touch-action: none;
+}
